--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -9,41 +9,59 @@ jobs:
   build-scan:
     runs-on: ubuntu-latest
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3️⃣ Build Docker image
       - name: Build Docker image
         run: docker build -t websec-app:latest .
 
-      - name: Run container (port 8081)
+      # 4️⃣ Run container on port 8081
+      - name: Run container
         run: |
-          docker run -d --name websec-test -p 8081:8081 websec-app:latest
+          docker run -d --name websec-test -p 8085:8085 websec-app:latest
           for i in {1..20}; do
-            if curl -sSf http://localhost:8081 >/dev/null 2>&1; then
-              echo "server up"; break
+            if curl -sSf http://localhost:8085 >/dev/null 2>&1; then
+              echo "Server is up"; break
             fi
-            echo "waiting..."
-            sleep 2
+            echo "Waiting for server..."; sleep 2
           done
 
+      # 5️⃣ Install Trivy
       - name: Install Trivy
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh
 
-      - name: Trivy image scan (output json)
-        run: trivy image --format json --output trivy-report.json --severity HIGH,CRITICAL websec-app:latest || true
+      # 6️⃣ Trivy image scan
+      - name: Trivy image scan (JSON)
+        run: |
+          trivy image --format json --output trivy-report.json --severity HIGH,CRITICAL websec-app:latest || true
 
-      - name: Run Nikto DAST
-        run: nikto -h http://localhost:8081 -o nikto-report.txt || true
+      # 7️⃣ Run OWASP ZAP full scan
+      - name: OWASP ZAP Full Scan
+        run: |
+          mkdir -p zap_reports
+          docker run --rm \
+            -v "${{ github.workspace }}/zap_reports:/zap/wrk:rw" \
+            ghcr.io/zaproxy/zaproxy:stable \
+            zap-full-scan.py \
+            -t http://host.docker.internal:8081 \
+            -r zap_report.html
 
+      # 8️⃣ Upload scan artifacts
       - name: Upload scan artifacts
         uses: actions/upload-artifact@v4
         with:
           name: scan-artifacts
-          path: trivy-report.json,nikto-report.txt
+          path: |
+            trivy-report.json
+            zap_reports/zap_report.html
 
-      - name: Run remediation gate (fail if criticals)
+      # 9️⃣ Run remediation gate (fail if criticals)
+      - name: Run remediation gate
         run: python3 scripts/remediation_gate.py
