--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -46,6 +46,7 @@ jobs:
       - name: OWASP ZAP Full Scan
         run: |
           mkdir -p zap_reports
+          chmod 777 zap_reports
           docker run --rm \
             -v "${{ github.workspace }}/zap_reports:/zap/wrk:rw" \
             ghcr.io/zaproxy/zaproxy:stable \
