--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -47,10 +47,10 @@ jobs:
         run: |
           mkdir -p zap_reports
           docker run --rm \
-          -v "${{ github.workspace }}/zap_reports:/zap/wrk:rw" \
+          -v "${PWD}/zap_reports:/zap/wrk:rw" \
           ghcr.io/zaproxy/zaproxy:stable \
           zap-full-scan.py \
-          -t ${{ secrets.ZAP_TARGET_URL }} \
+          -t https://example.com \
           -r zap_report.html \
           -z "-config api.disablekey=true" \
           -d
