--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -52,16 +52,17 @@ jobs:
       # 7️⃣ Run OWASP ZAP full scan
       - name: Run OWASP ZAP Full Scan
         run: |
-          mkdir -p zap_reports
-          docker run --rm -u 0:0 \
-          -v "${PWD}/zap_reports:/zap/wrk:rw" \
-          ghcr.io/zaproxy/zaproxy:stable \
-          zap-full-scan.py \
-          -t https://example.com \
-          -r /zap/wrk/zap_report.html \
-          -l WARN \
-          -z "-config api.disablekey=true" \
-          -d || true
+           docker run --rm \
+           -v "${PWD}/zap_reports:/zap/wrk:rw" \
+           ghcr.io/zaproxy/zaproxy:stable \
+           zap-full-scan.py \
+           -t https://example.com \
+           -r zap_report.html \   # HTML report
+           -J zap_report.json \   # JSON report
+           -x zap_report.xml \    # XML report
+           -l FAIL \              # Fail only on FAIL alerts
+           -z "-config api.disablekey=true" \
+           -d || true
 
 
 
